--- a/views/reportes/filtrosBaseSaldosCampo.twig
+++ b/views/reportes/filtrosBaseSaldosCampo.twig
@@ -10,10 +10,10 @@
 					{{ text_field_tag("fecha_inicio", '', {class:'form-control fecha', readonly:'readonly'}) }}
 				</div>
 
-{#				<div class="col-sm-3">#}
-{#					<b>Fecha Fin</b> <br>#}
-{#					{{ text_field_tag("fecha_fin", '', {class:'form-control fecha', readonly:'readonly'}) }}#}
-{#				</div>#}
+				<div class="col-sm-3">
+					<b>Fecha Fin</b> <br>
+					{{ text_field_tag("fecha_fin", '', {class:'form-control fecha', readonly:'readonly'}) }}
+				</div>
 			</div> 
 		</form>
 	</div>
