--- a/views/home.twig
+++ b/views/home.twig
@@ -2,7 +2,7 @@
 {% block content %}
 
 						<h4 class="">USUARIO</h4>
-                        <h3 ></i>&nbsp;{{ ds.usuario }}</h3><br/>
+                        <h3 ></i>&nbsp;{{ user.nombres }}</h3><br/>
                         <h4 class="">GESTION</h4>
                         <h3 >{{ ds.gestiones }}</h3>
                         <h4 class="">CLIENTE</h4>
