--- a/views/reportes/filtrosMejorUltimaGestion.twig
+++ b/views/reportes/filtrosMejorUltimaGestion.twig
@@ -55,37 +55,14 @@
 					</div>
 				</div>
 
-				<div class="col-sm-3">
-					<b>Fecha Inicio</b> <br>
-					{{ text_field_tag("fecha_inicio", '', {class:'form-control fecha'}) }}
-{#					<select class="form-control form-select select2" name="hora_inicio" id="hora_inicio" style="width: 60px;">#}
-{#						<option value=""></option>#}
-{#						<option v-for="(v,k) in horas" v-html="v" :value="k"></option>#}
-{#					</select> :#}
-{#					<select class="form-control form-select select2" name="minuto_inicio" id="minuto_inicio" style="width: 60px;">#}
-{#						<option value=""></option>#}
-{#						<option v-for="(v,k) in minutos" v-html="v" :value="k"></option>#}
-{#					</select>#}
-				</div>
-
-				<div class="col-sm-3">
-					<b>Fecha Fin</b> <br>
-					{{ text_field_tag("fecha_fin", '', {class:'form-control fecha'}) }}
-{#					<select class="form-control form-select select2" name="hora_fin" id="hora_fin" style="width: 60px;">#}
-{#						<option value=""></option>#}
-{#						<option v-for="(v,k) in horas" v-html="v" :value="k"></option>#}
-{#					</select> :#}
-{#					<select class="form-control form-select select2" name="minuto_fin" id="minuto_fin" style="width: 60px;">#}
-{#						<option value=""></option>#}
-{#						<option v-for="(v,k) in minutos" v-html="v" :value="k"></option>#}
-{#					</select>#}
-				</div>
+		
+				
 			</div>
 		</form>
 	</div>
 	<div class="card-footer">
-		<button id="btnFiltro" class="btn btn-success"><i class="glyphicon glyphicon-search"></i> Filtrar</button>
-		<button id="btnTodos" class="btn btn-success"><i class="fa fa-eraser"></i> Limpiar filtros</button>
+		<button id="btnFiltro" class="btn btn-success"><i class=""></i> Filtrar</button>
+		<button id="btnTodos" class="btn btn-success"><i class=""></i> Limpiar filtros</button>
 		{% include "reportes/loader.twig" %}
 		<script>
             var appFiltros = new Vue({
